made about.html more responsive and added div tag to prevent horizontal scrolling on mobile devices

--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,19 @@
   .app-3 {
     margin-top: -55px;
   }
+
+  .about-intro h1 {
+    font-size: 40px;
+  }
+
+  .about-intro h3 {
+    font-size: 25px;
+    opacity: 0.7;
+  }
+
+  a.email-link {
+    font-size: 20px;
+  }
 }
 
 #app-link {
@@ -58,19 +71,6 @@ h1,
 h2,
 h3 {
   margin: 0;
-}
-
-h1 {
-  font-size: 96px;
-}
-
-h2 {
-  font-size: 48px;
-}
-
-h3 {
-  font-size: 24px;
-  opacity: 0.7;
 }
 
 p {
